# mediaComp

./: .gitignore  Contributing.md  Develop.md  Media Functions.docx  README.md  Thonny Configuration.docx  pyproject.toml
.github/workflows/: release.yaml  releases.yaml  tests.yaml
Documentation/: Media Functions.docx  README.md  Thonny Configuration.docx  Windows Installation.docx
package/: __init__.py
package/core/: color.py  image.py  sound.py  utils.py
package/models/: Movie.py  Picture.py  PixelColor.py  Sound.py
package/scripts/: SoundExplorer.py  colorPicker.py  displayImage.py  pictureTool.py  show.py
src/mediaComp/: __init__.py  __init__.pyi
src/mediaComp/core/: __init__.py  image.py  root_manager.py  sound.py  utils.py
src/mediaComp/models/: Config.py  File_Chooser.py  Picture.py  PixelColor.py  Sound.py  SoundExplorer.py  SoundSample.py
src/mediaComp/scripts/: show.py
src/mediaPy/: __init__.py
src/mediaPy/core/: color.py  movie.py  turtle.py  utils.py
src/mediaPy/models/: Config.py  File_Chooser.py  Sound.py
src/mediaPy/scripts/: show.py
tests/: Picture_test.py
